Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,55 +1,46 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Nddsg.GitHub.io : Notre Dame Data Science Group">
+    <title>Nddsg.GitHub.io by nddsg</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Nddsg.GitHub.io</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Nddsg.GitHub.io</h1>
+        <p>Notre Dame Data Science Group</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/nddsg">View on GitHub</a>
 
-          <h1 id="project_title">Nddsg.GitHub.io</h1>
-          <h2 id="project_tagline">Notre Dame Data Science Group</h2>
+        <p class="view"><a href="https://github.com/nddsg">View My GitHub Profile</a></p>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a id="welcome-to-the-notre-dame-data-science-group-code-and-data-site" class="anchor" href="#welcome-to-the-notre-dame-data-science-group-code-and-data-site" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Notre Dame Data Science Group Code and Data Site.</h1>
+      </header>
+      <section>
+        <h2>
+<a id="welcome-to-the-notre-dame-data-science-group-code-and-data-site" class="anchor" href="#welcome-to-the-notre-dame-data-science-group-code-and-data-site" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Notre Dame Data Science Group Code and Data Site.</h2>
 
 <p>This is where we'll put our data, code and raw results.</p>
 
-<h2>
-<a id="people" class="anchor" href="#people" aria-hidden="true"><span class="octicon octicon-link"></span></a>People</h2>
+<h3>
+<a id="people" class="anchor" href="#people" aria-hidden="true"><span class="octicon octicon-link"></span></a>People</h3>
 
 <p><a href="https://github.com/tweninger" class="user-mention">@tweninger</a></p>
 
-<h2>
-<a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h2>
+<h3>
+<a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
