Added SIRS to Readme

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Nddsg.GitHub.io</title>
+    <title>Notre Dame Data Science Group</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/nddsg">View on GitHub</a>
 
-          <h1 id="project_title">Nddsg.GitHub.io</h1>
-          <h2 id="project_tagline">Notre Dame Data Science Group</h2>
+          <h1 id="project_title">Notre Dame Data Science Group</h1>
+          
 
         </header>
     </div>
