Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Nddsg.GitHub.io : Notre Dame Data Science Group">
+    <meta name="description" content="Data Science Group : University of Notre Dame">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Notre Dame Data Science Group</title>
+    <title>Data Science Group</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/nddsg">View on GitHub</a>
 
-          <h1 id="project_title">Notre Dame Data Science Group</h1>
-          
+          <h1 id="project_title">Data Science Group</h1>
+          <h2 id="project_tagline">University of Notre Dame</h2>
 
         </header>
     </div>
@@ -28,17 +28,48 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h2>
-<a id="welcome-to-the-notre-dame-data-science-group-code-and-data-site" class="anchor" href="#welcome-to-the-notre-dame-data-science-group-code-and-data-site" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Notre Dame Data Science Group Code and Data Site.</h2>
+<a id="notre-dame-data-science-group" class="anchor" href="#notre-dame-data-science-group" aria-hidden="true"><span class="octicon octicon-link"></span></a>Notre Dame Data Science Group</h2>
 
-<p>This is where we'll put our data, code and raw results.</p>
-
-<h3>
-<a id="people" class="anchor" href="#people" aria-hidden="true"><span class="octicon octicon-link"></span></a>People</h3>
-
-<p><a href="https://github.com/tweninger" class="user-mention">@tweninger</a></p>
+<p>This is where we'll collect our source code, datasets and raw results.</p>
 
 <h3>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
+
+<hr>
+
+<h4>
+<a id="simple-information-retrieval-system-sirs" class="anchor" href="#simple-information-retrieval-system-sirs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Simple Information Retrieval System (<a href="https://github.com/nddsg/SIRS">SIRS</a>)</h4>
+
+<h4>
+<a id="hierarchical-document-topic-model-hdtm" class="anchor" href="#hierarchical-document-topic-model-hdtm" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hierarchical Document Topic Model (<a href="https://github.com/nddsg/HDTM/tree/kais/">HDTM</a>)</h4>
+
+<ul>
+<li>R Anaylsis at(<a href="https://github.com/nddsg/HDTM/tree/kais/analysis">HDTM</a>)</li>
+</ul>
+
+<h4>
+<a id="mining-discriminative-meta-paths-httpsgithubcomnddsgdiscrmetapath" class="anchor" href="#mining-discriminative-meta-paths-httpsgithubcomnddsgdiscrmetapath" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mining Discriminative Meta Paths (<a href="https://github.com/nddsg/discrmetapath">https://github.com/nddsg/discrmetapath</a>)</h4>
+
+<ul>
+<li>Paper accepted and presented at 2014 ICDM MODAT Workshop: Preprint (<a href="http://www3.nd.edu/%7Etweninge/pubs/SW_ICDM_MODAT14.pdf">SW_ICDM_MODAT14</a>)</li>
+</ul>
+
+<h3>
+<a id="group-members" class="anchor" href="#group-members" aria-hidden="true"><span class="octicon octicon-link"></span></a>Group Members</h3>
+
+<hr>
+
+<ul>
+<li>Tim Weninger <a href="https://github.com/tweninger" class="user-mention">@tweninger</a>
+</li>
+<li>Baoxu Shi <a href="https://github.com/bxshi" class="user-mention">@bxshi</a>
+</li>
+<li>Corey Pennycuff <a href="https://github.com/coreyp1" class="user-mention">@coreyp1</a>
+</li>
+<li>Salvador Aguinaga</li>
+<li>Maria Glenski <a href="https://github.com/Maria-G" class="user-mention">@Maria-G</a>
+</li>
+</ul>
       </section>
     </div>
 
